--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,5 @@
 * {
-  box-sizing: border-box;
+  box-sizing: content-box;
   transition: 100ms ease-out;
 }
 
@@ -22,186 +22,9 @@ body {
   text-align: center;
 }
 
-.form-title {
-  background-color: rgb(51, 51, 51);
-  width: 140px;
-  margin: 0;
-  padding: 0 8px;
-  position: absolute;
-  top: -20px;
-  left: 40px;
-}
-
-form {
+.header-line {
+  height: 2px;
+  width: 400px;
   margin: auto;
-  width: 500px;
-  position: relative;
-  padding: 24px;
-  text-align: center;
-  border-radius: 12px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: 2px dashed rgb(255, 255, 255);
-  gap: 12px;
-}
-
-textarea {
-  max-width: 460px;
-  max-height: 300px;
-}
-
-.input {
-  padding: 10px;
-  background-color: rgb(109, 109, 109);
-  border: 0;
-  color: rgb(238, 238, 238);
-  border-radius: 6px;
-}
-
-input:focus, textarea:focus {
-  outline: 0;
-}
-
-.input__title {
-  width: 250px;
-}
-
-.input__content {
-  width: 100%;
-  height: 100px;
-}
-
-.btn-submit {
-  color: rgb(238, 238, 238);
-  background: none;
-  border: 1px solid rgb(238, 238, 238);
-  width: 100px;
-  height: 30px;
-  cursor: pointer;
-}
-
-.btn-submit:hover {
-  color: rgb(51, 51, 51);
-  background-color: rgb(238, 238, 238);
-}
-
-.note-list {
-  width: 80vw;
-  min-width: 500px;
-  position: relative;
-  padding: 24px;
-  border-radius: 12px;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 16px;
-  border: 2px dashed rgb(255, 255, 255);
-}
-
-.list-title {
-  background-color: rgb(51, 51, 51);
-  margin: 0;
-  padding: 0 14px;
-  position: absolute;
-  top: -20px;
-  left: 40px;
-}
-
-.list-title__unarchived {
-  width: 140px;
-}
-
-.list-title__archived {
-  width: 246px;
-}
-
-.note-card {
-  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
-  border-radius: 12px;
-  height: 150px;
-  width: 48%;
-  border: 2px solid black;
-  display: flex;
-  flex-direction: row;
-  overflow: hidden;
-}
-
-.note-body-card {
-  width: 80%;
-  padding: 8px 14px;
-  overflow: hidden;
-  height: auto;
-}
-
-.note-body-card h3 {
-  margin: 8px 0;
-  word-wrap: break-word;
-}
-
-.note-body-card p {
-  margin: 0;
-  word-wrap: break-word;
-  height: 68%;
-  color: rgba(238, 238, 238, 0.6);
-  overflow-y: scroll;
-}
-
-.note-body-card p::-webkit-scrollbar {
-  display: none;
-}
-
-.c-button {
-  height: 100%;
-  width: 20%;
-  display: flex;
-  flex-direction: column;
-}
-
-.btn-item {
-  height: 50%;
-  background-color: transparent;
-  text-align: center;
-  font-weight: bold;
-  cursor: pointer;
-  border: 0;
-  border-left: 2px solid black;
-}
-
-.btn-item__delete {
-  color: rgb(255, 26, 26);
-  border-top: 1px solid black;
-}
-.btn-item__delete:hover {
-  color: rgb(51, 51, 51);
-  background-color: rgb(255, 26, 26);
-}
-
-.btn-item__archive {
-  color: rgb(219, 219, 219);
-  border-bottom: 1px solid black;
-}
-.btn-item__archive:hover {
-  background-color: rgb(219, 219, 219);
-  color: rgb(51, 51, 51);
-  border-bottom: 1px solid black;
-}
-
-form > div {
-  text-align: right;
-}
-
-form > div > p {
-  margin: 0;
-}
-
-.remaining-char {
-  color: rgba(238, 238, 238, 0.5);
-  font-size: 0.75rem;
-}
-
-.search-bar {
-  height: 40px;
-  padding: 0 30px;
-  border-radius: 20px;
-  border: 0;
+  background-color: #FFF;
 }
