--- a/src/components/NoteInput/NoteInput.css
+++ b/src/components/NoteInput/NoteInput.css
@@ -1,5 +1,5 @@
 .form-title {
-  background-color: rgb(51, 51, 51);
+  background-color: var(--background-color);
   width: 140px;
   margin: 0;
   padding: 0 8px;
@@ -18,7 +18,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 2px dashed rgb(255, 255, 255);
+  border: 2px dashed var(--font-color);
   gap: 12px;
 }
 
@@ -40,9 +40,9 @@ textarea {
 
 .input {
   padding: 10px;
-  background-color: rgb(109, 109, 109);
-  border: 0;
-  color: rgb(238, 238, 238);
+  background-color: var(--background-color);
+  border: 1px solid var(--font-color);
+  color: var(--font-color);
   border-radius: 6px;
 }
 
@@ -61,15 +61,14 @@ textarea:focus {
 }
 
 .btn-submit {
-  color: rgb(238, 238, 238);
-  background: none;
-  border: 1px solid rgb(238, 238, 238);
+  color: var(--font-color);
+  background: var(--background-color);
+  border: 1px solid var(--font-color);
   width: 100px;
   height: 30px;
   cursor: pointer;
 }
 
 .btn-submit:hover {
-  color: rgb(51, 51, 51);
-  background-color: rgb(238, 238, 238);
+  transform: scale(1.05);
 }
