--- a/src/components/NoteItem/NoteItem.css
+++ b/src/components/NoteItem/NoteItem.css
@@ -10,12 +10,12 @@
 }
 
 .linked-div {
-  color: #fff;
+  color: var(--font-color);
   text-decoration: none;
 }
 
 .linked-div:visited {
-  color: #fff;
+  color: var(--font-color);
   text-decoration: none;
 }
 
@@ -35,7 +35,7 @@
   margin: 0;
   word-wrap: break-word;
   height: 68%;
-  color: rgba(238, 238, 238, 0.6);
+  color: var(--font-color);
   overflow-y: scroll;
 }
 
@@ -65,6 +65,6 @@
   border-top: 1px solid black;
 }
 .btn-item__delete:hover {
-  color: rgb(51, 51, 51);
+  color: var(--font-color);
   background-color: rgb(255, 26, 26);
 }
